--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -10,12 +10,12 @@
  // font-weight: normal
  // font-style: normal
 
-@font-face 
-  font-family: "Lora"
-  src: url("../fonts/Lora/Lora.eot")
-  src: url("../fonts/Lora/Lora.eot?#iefix") format("embedded-opentype"), url("../fonts/Lora/Lora.ttf") format("truetype")
-  font-weight: normal
-  font-style: normal
+// @font-face 
+//   font-family: "Lora"
+//   src: url("../fonts/Lora/Lora.eot")
+//   src: url("../fonts/Lora/Lora.eot?#iefix") format("embedded-opentype"), url("../fonts/Lora/Lora.ttf") format("truetype")
+//   font-weight: normal
+//   font-style: normal
 
 a
 	&:hover
